enemy shooting/double shot

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="beam.js"></script>
         <script type="text/javascript" src="Explosion.js"></script>
         <script type="text/javascript" src="game.js"></script>
+        <script type="text/javascript" src="BeamJr.js"></script>
 
     </head>
     <body>
