--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <script type="text/javascript" src="phaser.min.js"></script>
         <script type="text/javascript" src="Scene1.js"></script>
         <script type="text/javascript" src="Scene2.js"></script>
+        <script type="text/javascript" src="Scene3.js"></script>
         <script type="text/javascript" src="beam.js"></script>
         <script type="text/javascript" src="Explosion.js"></script>
         <script type="text/javascript" src="game.js"></script>
         <script type="text/javascript" src="BeamJr.js"></script>
+       
+        
 
     </head>
     <body>
